styles/morkborg.css
/* ... */
.morkborg.sheet.follower .sheet-body .form-group select {
  font-family: "Special Elite", cursive;
  font-size: 14pt;
}
.morkborg.sheet.follower .sheet-body .form-group.special {
  flex: 1;
}
/* ====================== */
/* UI/Dialog fixes */
/* ====================== */
/* TODO: figure out the right class/level to fix this stuff */
.form-group input[type="text"] {
  color: white;
}
.form-group input[type="text"]:hover {
  box-shadow: 0 0 10px #fff160;
}
.form-group input[type="text"]:focus {
  box-shadow: 0 0 10px #fff160;
}
.form-group textarea {
  color: white;
}
.form-group textarea:hover {
  box-shadow: 0 0 10px #fff160;
}
.form-group textarea:focus {
  box-shadow: 0 0 10px #fff160;
  outline: none;
}
form button {
  color: white;
}
form button:hover {
  box-shadow: 0 0 10px #fff160;
}
a:hover {
  text-shadow: 0 0 8px #fff160;
}
input[type="text"] {
  color: white;
}
input[type="text"]:hover {
  box-shadow: 0 0 10px #fff160;
}
input[type="text"]:focus {
  box-shadow: 0 0 10px #fff160;
}
/*form.editable .results .table-result {
  color: white;
}
form.editable .results .table-result {
  color: white;
}*/
form.editable .results .result-image img {
  background-color: white;
}
form.editable .results .result-type select {
  color: white;
}
form.editable .results .result-type select:hover {
  box-shadow: 0 0 10px #fff160;
}
form.editable .results .result-type select:focus {
  box-shadow: 0 0 10px #fff160;
}
form.editable .results .result-details select {
  color: white;
}
form.editable .results .result-details select:hover {
  box-shadow: 0 0 10px #fff160;
}
form.editable .results .result-details select:focus {
  box-shadow: 0 0 10px #fff160;
}
form.editable .results .result-details input[type="text"] {
  color: white;
}
form.editable .results .result-details input[type="text"]:hover {
  box-shadow: 0 0 10px #fff160;
}
form.editable .results .result-details input[type="text"]:focus {
  box-shadow: 0 0 10px #fff160;
}
.table-results .table-result .result-text .entity-link {
  color: black;
  background-color: #fff160;
}
/* Fixes Module Management dialog */
#module-management .package-list .package-title,
#module-management .package-list .package-metadata,
#module-management .package-list .package-description {
  color: white;
}
/* Fixes hard-to-read dark text on various system Dialogs */
.window-app .window-content .notes {
  color: #fff160;
}
.window-app .window-content form .form-header {
  color: white;
}
.window-app .window-content form .notes {
  color: #fff160;
}
.window-app .window-content .form-group span.units {
  color: #fff160;
}
.window-app .window-content .form-group input {
  color: white;
}
.window-app .window-content .form-group input:hover {
  box-shadow: 0 0 10px #fff160;
}
.window-app .window-content .form-group input:focus {
  box-shadow: 0 0 10px #fff160;
}
/* Fixes Journal image select dialog */
.journal-sheet.image-popout .window-content .form-group input {
  color: black;
}
.journal-sheet.image-popout .window-content .form-group.picker button.file-picker {
  background-color: black;
}
.journal-sheet form select:hover {
  box-shadow: 0 0 10px #fff160;
}
.journal-sheet form select:focus {
  box-shadow: 0 0 10px #fff160;
}
.journal-sheet form .form-group.title input[type="text"] {
  background-color: rgba(0, 0, 0, 0.05);
}
.journal-sheet form .form-group.picker input[type="text"].image {
  background-color: rgba(0, 0, 0, 0.05);
}
/* ====================== */
/* UI / Chat */
/* ====================== */
.morkborg .button {
  background: white;
  color: black;
  font-family: "FetteTrumpDeutsch";
}
#chat-controls {
  color: white;
}
#chat-controls i.fas:hover {
  color: #ffe800;
  text-shadow: 0 0 5px #fff160;
}
#chat-controls .roll-type-select {
  color: white;
  background: black;
}
#chat-controls select:focus {
  box-shadow: 0 0 10px #fff160;
}
#chat-log {
  background: black;
}
#chat-log .chat-message {
  background: black;
  color: white;
  border: 3px solid#252525;
  margin-top: 6px;
  border-radius: 0;
  font-family: "FetteTrumpDeutsch";
}
#chat-log .message h4,
#chat-log .message h3,
#chat-log .message h2,
#chat-log .message-metadata {
  color: white;
}
#chat-log .message h2 {
  background: #ffe800;
  color: black;
}
#chat-log .chat-message .message-header .message-sender {
  font-family: "Blood Crow", fantasy, serif;
  font-size: 20px;
}
#chat-log .chat-message .message-header .message-metadata {
  font-family: "Oswald", sans-serif;
  font-size: 12px;
}
#chat-log .chat-message .message-header span.flavor-text {
  font-family: "Oswald", sans-serif;
  font-size: 14px;
  font-weight: bold;
  color: white;
}
#chat-log .message .dice-formula,
#chat-log .message .dice-total {
  font-size: 16px;
  border: 1px solid #252525;
  border-radius: 0;
}
/* #chat-log .flavor-text {
  color: white;
  font-size: 13.5px;
} */
#chat-form textarea {
  color: white;
  background: black;
  border: 2px solid #252525;
  font-family: "FetteTrumpDeutsch";
}
#chat-form textarea:focus {
  outline: 2px solid #ffe800;
  box-shadow: 0 0 10px #fff160;
}
#client-settings button {
  color: black;
  background: white;
}
#client-settings h2 {
  border-bottom: none;
  background: #ffe800;
  color: black;
  font-family: "FetteTrumpDeutsch";
}
#client-settings select {
  color: white;
  background: black;
}
#client-settings select:focus {
  outline: none;
  box-shadow: 0 0 5px #ffe800;
}
#controls {
  color: white;
  background: black;
}
#controls .control-tool.toggle {
  background: black;
  border: 1px solid #252525;
}
#controls .control-tool.toggle.active {
  background: black;
  text-shadow: 0 0 10px #fff160;
  box-shadow: 0 0 10px #fff160;
}
#controls .control-tools {
  color: white;
  background: black;
}
#controls .control-tool.active,
#controls .control-tool:hover,
#controls .scene-control.active,
#controls .scene-control:hover {
  color: white;
  border: 1px solid #ffe800;
  box-shadow: 0 0 10px #fff160;
}
/* ... */

